# Ai-fin-assistant

./: README.md
backend/: .env.example  .gitignore  docker-compose.yml  package-lock.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1a9fb0003d1c_add_refresh_token_column_to_users.py  420d1a2c277a_add_hashed_password_and_is_active_to_.py  4527cec15840_add_refresh_token_column_to_users.py  4e9d5f65e3f4_add_assistant_usage_logs_table.py  89f7fe29db2b_add_message_id_to_feedback.py  d5d9f8411740_initial_migration.py  d6d41a956b87_add_is_verified_to_users.py  e25c29691f7a_create_assistant_messages_table.py  eb419995c086_initial_migration.py  f2f887443e1f_add_survey_results_table.py
backend/app/: config.py  logger.py  main.py
backend/app/api/: assistant.py  assistant_usage.py  auth.py  event.py  feedback.py  message.py  survey.py  user.py
backend/app/core/: limiter.py  openai_client.py  security.py
backend/app/crud/: assistant.py  event.py  feedback.py  message.py  survey.py  user.py
backend/app/db/: __init__.py  base.py  check_tables.py  init_db.py  session.py
backend/app/models/: __init__.py  assistant.py  assistant_message.py  assistant_usage.py  event.py  feedback.py  message.py  survey.py  user.py
backend/app/schemas/: __init__.py  assistant.py  assistant_usage.py  event.py  feedback.py  message.py  survey.py  user.py
backend/app/tests/: test_db.py
